@@ -86,7 +86,7 @@ class RetrieveValidateAspectTest {
         mockUser.setUsername("user");
         mockUser.setPermissions(new HashMap<>());
         UserContext.setUser(mockUser);
-        PermissionsContext.setPermissions(new ArrayList<>(Arrays.asList("Shipments:Retrive:Air Shipment:ImportAirShipmentRetrive")));
+        PermissionsContext.setPermissions(new ArrayList<>(List.of("Shipments:Retrive:Air Shipment:ImportAirShipmentRetrive")));
         ShipmentDetails mockShipment = new ShipmentDetails();
         TenantSettingsDetailsContext.setCurrentTenantSettings(
                 V1TenantSettingsResponse.builder().P100Branch(false).build());
@@ -98,7 +98,8 @@ class RetrieveValidateAspectTest {
         mockShipment.setShipmentType("FCL");
         ShipmentSettingsDetailsContext.setCurrentTenantSettings(ShipmentSettingsDetails.builder().autoEventCreate(false).build());
         retrieveValidateAspect = new RetrieveValidateAspect();
-        assertThrows(ValidationException.class, () -> retrieveValidateAspect.validateShipmentRetrieve(objectMapper.convertValue(mockShipment, ShipmentDetailsResponse.class)));
+        ShipmentDetailsResponse shipmentDetailsResponse = objectMapper.convertValue(mockShipment, ShipmentDetailsResponse.class);
+        assertThrows(ValidationException.class, () -> retrieveValidateAspect.validateShipmentRetrieve(shipmentDetailsResponse));
     }
 
     @Test
@@ -108,7 +109,7 @@ class RetrieveValidateAspectTest {
         mockUser.setUsername("user");
         mockUser.setPermissions(new HashMap<>());
         UserContext.setUser(mockUser);
-        PermissionsContext.setPermissions(new ArrayList<>(Arrays.asList("Shipments:Retrive:Air Shipment:ImportAirShipmentRetrive")));
+        PermissionsContext.setPermissions(new ArrayList<>(List.of("Shipments:Retrive:Air Shipment:ImportAirShipmentRetrive")));
         ShipmentDetails mockShipment = new ShipmentDetails();
         TenantSettingsDetailsContext.setCurrentTenantSettings(
                 V1TenantSettingsResponse.builder().P100Branch(false).build());
@@ -120,7 +121,8 @@ class RetrieveValidateAspectTest {
         mockShipment.setShipmentType("FCL");
         ShipmentSettingsDetailsContext.setCurrentTenantSettings(ShipmentSettingsDetails.builder().autoEventCreate(false).build());
         retrieveValidateAspect = new RetrieveValidateAspect();
-        assertThrows(ValidationException.class, () -> retrieveValidateAspect.validateShipmentRetrieve(objectMapper.convertValue(mockShipment, ShipmentDetailsResponse.class)));
+        ShipmentDetailsResponse shipmentDetailsResponse = objectMapper.convertValue(mockShipment, ShipmentDetailsResponse.class);
+        assertThrows(ValidationException.class, () -> retrieveValidateAspect.validateShipmentRetrieve(shipmentDetailsResponse));
     }
 
     @Test
@@ -130,7 +132,7 @@ class RetrieveValidateAspectTest {
         mockUser.setUsername("user");
         mockUser.setPermissions(new HashMap<>());
         UserContext.setUser(mockUser);
-        PermissionsContext.setPermissions(new ArrayList<>(Arrays.asList("Shipments:Retrive:Air Shipment:ImportAirShipmentRetrive")));
+        PermissionsContext.setPermissions(new ArrayList<>(List.of("Shipments:Retrive:Air Shipment:ImportAirShipmentRetrive")));
         ShipmentDetails mockShipment = new ShipmentDetails();
         TenantSettingsDetailsContext.setCurrentTenantSettings(
                 V1TenantSettingsResponse.builder().P100Branch(false).build());
@@ -154,7 +156,7 @@ class RetrieveValidateAspectTest {
         mockUser.setUsername("user");
         mockUser.setPermissions(new HashMap<>());
         UserContext.setUser(mockUser);
-        PermissionsContext.setPermissions(new ArrayList<>(Arrays.asList("Shipments:Retrive:Air Shipment:ImportAirShipmentRetrive")));
+        PermissionsContext.setPermissions(new ArrayList<>(List.of("Shipments:Retrive:Air Shipment:ImportAirShipmentRetrive")));
         ShipmentDetails mockShipment = new ShipmentDetails();
         TenantSettingsDetailsContext.setCurrentTenantSettings(
                 V1TenantSettingsResponse.builder().P100Branch(false).build());
@@ -187,7 +189,8 @@ class RetrieveValidateAspectTest {
         ShipmentSettingsDetailsContext.setCurrentTenantSettings(ShipmentSettingsDetails.builder().autoEventCreate(false).build());
         Optional<ShipmentDetails> shipmentDetails = Optional.of(mockShipment);
         retrieveValidateAspect = new RetrieveValidateAspect();
-        assertThrows(ValidationException.class, () -> retrieveValidateAspect.validateShipmentRetrieve(objectMapper.convertValue(shipmentDetails, ShipmentDetailsResponse.class)));
+        ShipmentDetailsResponse shipmentDetailsResponse = objectMapper.convertValue(shipmentDetails, ShipmentDetailsResponse.class);
+        assertThrows(ValidationException.class, () -> retrieveValidateAspect.validateShipmentRetrieve(shipmentDetailsResponse));
     }
 
     @Test
@@ -197,7 +200,7 @@ class RetrieveValidateAspectTest {
         mockUser.setUsername("user");
         mockUser.setPermissions(new HashMap<>());
         UserContext.setUser(mockUser);
-        PermissionsContext.setPermissions(new ArrayList<>(Arrays.asList("Consolidations:Retrive:All Consolidation:AllConsolidationRetrive")));
+        PermissionsContext.setPermissions(new ArrayList<>(List.of("Consolidations:Retrive:All Consolidation:AllConsolidationRetrive")));
         ConsolidationDetails mockConsolidation = new ConsolidationDetails();
         TenantSettingsDetailsContext.setCurrentTenantSettings(
                 V1TenantSettingsResponse.builder().P100Branch(false).build());
@@ -221,7 +224,7 @@ class RetrieveValidateAspectTest {
         mockUser.setUsername("user");
         mockUser.setPermissions(new HashMap<>());
         UserContext.setUser(mockUser);
-        PermissionsContext.setPermissions(new ArrayList<>(Arrays.asList("Consolidations:Retrive:Air Consolidation:ImportAirConsolidationRetrive")));
+        PermissionsContext.setPermissions(new ArrayList<>(List.of("Consolidations:Retrive:Air Consolidation:ImportAirConsolidationRetrive")));
         ConsolidationDetails mockConsolidation = new ConsolidationDetails();
         TenantSettingsDetailsContext.setCurrentTenantSettings(
                 V1TenantSettingsResponse.builder().P100Branch(false).build());
@@ -233,7 +236,8 @@ class RetrieveValidateAspectTest {
         mockConsolidation.setContainerCategory("FCL");
         ShipmentSettingsDetailsContext.setCurrentTenantSettings(ShipmentSettingsDetails.builder().autoEventCreate(false).build());
         retrieveValidateAspect = new RetrieveValidateAspect();
-        assertThrows(ValidationException.class, () -> retrieveValidateAspect.validateConsolidationRetrieve(objectMapper.convertValue(mockConsolidation, ConsolidationDetailsResponse.class)));
+        ConsolidationDetailsResponse consolidationDetailsResponse = objectMapper.convertValue(mockConsolidation, ConsolidationDetailsResponse.class);
+        assertThrows(ValidationException.class, () -> retrieveValidateAspect.validateConsolidationRetrieve(consolidationDetailsResponse));
     }
 
     @Test
@@ -243,7 +247,7 @@ class RetrieveValidateAspectTest {
         mockUser.setUsername("user");
         mockUser.setPermissions(new HashMap<>());
         UserContext.setUser(mockUser);
-        PermissionsContext.setPermissions(new ArrayList<>(Arrays.asList("Consolidations:Retrive:Air Consolidation:ImportAirConsolidationRetrive")));
+        PermissionsContext.setPermissions(new ArrayList<>(List.of("Consolidations:Retrive:Air Consolidation:ImportAirConsolidationRetrive")));
         ConsolidationDetails mockConsolidation = new ConsolidationDetails();
         TenantSettingsDetailsContext.setCurrentTenantSettings(
                 V1TenantSettingsResponse.builder().P100Branch(false).build());
@@ -255,7 +259,8 @@ class RetrieveValidateAspectTest {
         mockConsolidation.setContainerCategory("FCL");
         ShipmentSettingsDetailsContext.setCurrentTenantSettings(ShipmentSettingsDetails.builder().autoEventCreate(false).build());
         retrieveValidateAspect = new RetrieveValidateAspect();
-        assertThrows(ValidationException.class, () -> retrieveValidateAspect.validateConsolidationRetrieve(objectMapper.convertValue(mockConsolidation, ConsolidationDetailsResponse.class)));
+        ConsolidationDetailsResponse consolidationDetailsResponse = objectMapper.convertValue(mockConsolidation, ConsolidationDetailsResponse.class);
+        assertThrows(ValidationException.class, () -> retrieveValidateAspect.validateConsolidationRetrieve(consolidationDetailsResponse));
     }
 
     @Test
@@ -265,7 +270,7 @@ class RetrieveValidateAspectTest {
         mockUser.setUsername("user");
         mockUser.setPermissions(new HashMap<>());
         UserContext.setUser(mockUser);
-        PermissionsContext.setPermissions(new ArrayList<>(Arrays.asList("Consolidations:Retrive:Air Consolidation:ImportAirConsolidationRetrive")));
+        PermissionsContext.setPermissions(new ArrayList<>(List.of("Consolidations:Retrive:Air Consolidation:ImportAirConsolidationRetrive")));
         ConsolidationDetails mockConsolidation = new ConsolidationDetails();
         TenantSettingsDetailsContext.setCurrentTenantSettings(
                 V1TenantSettingsResponse.builder().P100Branch(false).build());
@@ -289,7 +294,7 @@ class RetrieveValidateAspectTest {
         mockUser.setUsername("user");
         mockUser.setPermissions(new HashMap<>());
         UserContext.setUser(mockUser);
-        PermissionsContext.setPermissions(new ArrayList<>(Arrays.asList("Consolidations:Retrive:Air Consolidation:ImportAirConsolidationRetrive")));
+        PermissionsContext.setPermissions(new ArrayList<>(List.of("Consolidations:Retrive:Air Consolidation:ImportAirConsolidationRetrive")));
         ConsolidationDetails mockConsolidation = new ConsolidationDetails();
         TenantSettingsDetailsContext.setCurrentTenantSettings(
                 V1TenantSettingsResponse.builder().P100Branch(false).build());
@@ -320,8 +325,8 @@ class RetrieveValidateAspectTest {
         mockConsolidation.setShipmentType("EXP");
         mockConsolidation.setContainerCategory("FCL");
         ShipmentSettingsDetailsContext.setCurrentTenantSettings(ShipmentSettingsDetails.builder().autoEventCreate(false).build());
-        Optional<ConsolidationDetails> consolidationDetails = Optional.of(mockConsolidation);
         retrieveValidateAspect = new RetrieveValidateAspect();
-        assertThrows(ValidationException.class, () -> retrieveValidateAspect.validateConsolidationRetrieve(objectMapper.convertValue(consolidationDetails, ConsolidationDetailsResponse.class)));
+        ConsolidationDetailsResponse consolidationDetailsResponse = objectMapper.convertValue(mockConsolidation, ConsolidationDetailsResponse.class);
+        assertThrows(ValidationException.class, () -> retrieveValidateAspect.validateConsolidationRetrieve(consolidationDetailsResponse));
     }
 }
